tests/ui/method_unsafe.stderr
error: Resource methods must not be unsafe
 --> $DIR/method_unsafe.rs:8:1
  |
8 | unsafe fn read_all()
  | ^^^^^^

error[E0433]: failed to resolve: use of undeclared type or module `_gotham_restful_resource_foo_resource_method_read_all`
 --> $DIR/method_unsafe.rs:3:10
  |
3 | #[derive(Resource)]
  |          ^^^^^^^^ use of undeclared type or module `_gotham_restful_resource_foo_resource_method_read_all`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
